refactored a lot the waves, now they got the correct Z-index and a cool wave effect

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -234,10 +234,22 @@ p {
   pointer-events: none;
   position: absolute;
   bottom: 0;
-  left: -10%;
+  left: 0;
   width: 110%;
   height: 100%;
   overflow: hidden;
+}
+
+.header__waves__svg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.header__waves__svg--1 {
+  z-index: -1;
 }
 
 .spaceshuttle {
@@ -352,22 +364,6 @@ p {
   }
   100% {
     opacity: 1;
-  }
-}
-
-.header__waves {
-  z-index: 101;
-}
-
-@keyframes washes {
-  0% {
-    left: 0;
-  }
-  50% {
-    left: 5%;
-  }
-  100% {
-    left: 0;
   }
 }
 
