--- a/resources/assets/sass/pages/_home.scss
+++ b/resources/assets/sass/pages/_home.scss
@@ -145,10 +145,20 @@
 
 .header__waves {
     pointer-events: none;
-    @include position(absolute, null, null, 0, -10%);
+    @include position(absolute, null, null, 0, 0);
     width: 110%;
     height: 100%; 
     overflow: hidden;
+}
+
+.header__waves__svg {
+    @include position(absolute, null, null, 0, 0);
+    width: 100%;
+    height: 100%;
+    
+    &--1 {
+        z-index: -1;
+    }
 }
 
 .spaceshuttle {
@@ -265,49 +275,6 @@
     }
     100% {
         opacity: 1;
-    }
-}
-
-// .header__wave {
-//     position: absolute;
-//     bottom: -200px;
-//     left: 0%;
-//     width: 100%;
-
-//     &--1 {
-//         z-index: -1;
-//         animation: washes 20s ease-out infinite;
-//     }
-
-//     &--2 {
-//         bottom: -215px;
-//         animation: washes 16s ease-out infinite;
-//     }
-
-//     &--3 {
-//         bottom: -200px;
-//         z-index: 101;
-
-//         animation: washes 12s ease-in-out infinite;
-//     }
-// }
-
-.header__waves {
-    z-index: 101;
-}
-
-@keyframes washes {
-    0% {
-        // transform: translateX(0%);
-        left: 0;
-    }
-    50% {
-        // transform: translateX(5%);
-        left: 5%;
-    }
-    100% {
-        // transform: translateX(0%);
-        left: 0;
     }
 }
 
